monitoring/ingress/namespace-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: namespace-strict-mode
  namespace: monitoring
spec:
  mtls:
    mode: STRICT
