monitoring/ingress/prometheus-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prometheus-peer-authentication
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  # mtls:
  #   mode: UNSET
  portLevelMtls:
    9090:
      # mode: PERMISSIVE
      mode: DISABLE
